# nightingale

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
analyzer/: ARCHITECTURE.md  align.py  analyze.py  audio.py  hallucination.py  key_detection.py  language.py  pipeline.py  requirements.txt  server.py  setup.sh  stems.py  test_key_detection.py  transcribe.py  whisper_compat.py
packaging/linux/: nightingale.desktop
packaging/macos/: Info.plist
scripts/: deploy-debian.sh  fetch-vendor-bin.sh  make-release.ps1  make-release.sh
site/: astro.config.mjs  package-lock.json  package.json
site/docs/: book.toml
site/docs/src/: SUMMARY.md  backgrounds.md  building.md  configuration.md  controls-reference.md  controls.md  getting-started.md  how-it-works.md  introduction.md  lyrics.md  profiles.md  scoring.md  stems.md  troubleshooting.md
site/docs/theme/: mermaid-init.js  nightingale.css  sidebar-link.js
site/public/: robots.txt
site/src/components/: Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  Nav.astro  Newsletter.astro  Platforms.astro  Video.astro
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/styles/: global.css
src/: config.rs  main.rs  profile.rs  setup.rs  states.rs  ui.rs  vendor.rs  vendor_scripts.rs
src/analyzer/: cache.rs  mod.rs  transcript.rs
src/menu/: about.rs  components.rs  folder.rs  mod.rs  profile.rs  settings.rs  sidebar.rs  song_card.rs
src/player/: audio.rs  background.rs  lyrics.rs  microphone.rs  mod.rs  results.rs  scoring.rs  video_bg.rs
src/scanner/: metadata.rs  mod.rs
