[package]
name = "nightingale"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "default_app",
    "default_platform",
    "2d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "bevy_scene",
    "picking",
    "png",
    "jpeg",
    "bevy_post_process",
] }
bevy_kira_audio = { version = "0.25", features = ["mp3", "flac", "wav", "ogg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
lofty = "0.23"
dirs = "6"
rfd = "0.17"
walkdir = "2"
cpal = "0.17"
hound = "3.5"
pitch-detection = "0.3"
ureq = { version = "3", features = ["json"] }
dotenvy = "0.15"
rand = "0.9"
urlencoding = "2.1.3"
