[package]
name = "nightingale"
version = "0.3.3"
edition = "2024"
license = "GPL-3.0-or-later"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "default_app",
    "default_platform",
    "wayland",
    "2d_bevy_render",
    "ui_api",
    "ui_bevy_render",
    "bevy_scene",
    "picking",
    "png",
    "jpeg",
    "bevy_post_process",
] }
bevy_kira_audio = { version = "0.25", features = ["mp3", "flac", "wav", "ogg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
lofty = "0.23"
dirs = "6"
rfd = "0.17"
walkdir = "2"
cpal = "0.17"
hound = "3.5"
pitch-detection = "0.3"
ureq = { version = "3", features = ["json"] }
dotenvy = "0.15"
rand = "0.9"
urlencoding = "2.1.3"
bevy_embedded_assets = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
winit = "0.30"
tracing-subscriber = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[build-dependencies]
winresource = "0.1"
